--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,89 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA"   />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name='android.permission.SEND_SMS'/>
+    <uses-permission android:name='android.permission.CALL_PHONE'/>
+    <uses-permission android:name='android.permission.READ_PHONE_STATE'/>
+    <uses-permission android:name='android.permission.READ_CONTACTS'/>
+    <uses-permission android:name='android.permission.WRITE_CONTACTS'/>
+    <uses-permission android:name='android.permission.READ_CALENDAR'/>
+    <uses-permission android:name='android.permission.WRITE_CALENDAR'/>
+    <uses-permission android:name='android.permission.READ_USER_DICTIONARY'/>
+    <uses-permission android:name='android.permission.WRITE_USER_DICTIONARY'/>
+    <uses-permission android:name='android.permission.ACCESS_FINE_LOCATION'/>
+    <uses-permission android:name='android.permission.ACCESS_COARSE_LOCATION'/>
+    <uses-permission android:name='android.permission.ACCESS_LOCATION_EXTRA_COMMANDS'/>
+    <uses-permission android:name='android.permission.ACCESS_NETWORK_STATE'/>
+    <uses-permission android:name='android.permission.ACCESS_WIFI_STATE'/>
+    <uses-permission android:name='android.permission.BLUETOOTH'/>
+    <uses-permission android:name='android.permission.EXPAND_STATUS_BAR'/>
+    <uses-permission android:name='android.permission.DISABLE_KEYGUARD'/>
+    <uses-permission android:name='android.permission.REAL_GET_TASKS'/>
+    <uses-permission android:name='android.permission.CHANGE_CONFIGURATION'/>
+    <uses-permission android:name='android.permission.REORDER_TASKS'/>
+    <uses-permission android:name='android.permission.SET_ANIMATION_SCALE'/>
+    <uses-permission android:name='android.permission.SET_PREFERRED_APPLICATIONS'/>
+    <uses-permission android:name='android.permission.WRITE_SETTINGS'/>
+    <uses-permission android:name='android.permission.WRITE_SECURE_SETTINGS'/>
+    <uses-permission android:name='android.permission.BROADCAST_STICKY'/>
+    <uses-permission android:name='android.permission.SET_DEBUG_APP'/>
+    <uses-permission android:name='android.permission.SET_PROCESS_LIMIT'/>
+    <uses-permission android:name='android.permission.SET_ALWAYS_FINISH'/>
+    <uses-permission android:name='android.permission.DUMP'/>
+    <uses-permission android:name='android.permission.SIGNAL_PERSISTENT_PROCESSES'/>
+    <uses-permission android:name='android.permission.KILL_BACKGROUND_PROCESSES'/>
+    <uses-permission: name='android.permission.FORCE_BACK'/>
+    <uses-permission: name='android.permission.BATTERY_STATS'/>
+    <uses-permission: name='android.permission.INTERNAL_SYSTEM_WINDOW'/>
+    <uses-permission: name='android.permission.INJECT_EVENTS'/>
+    <uses-permission: name='android.permission.RETRIEVE_WINDOW_CONTENT'/>
+    <uses-permission: name='android.permission.SET_ACTIVITY_WATCHER'/>
+    <uses-permission: name='android.permission.READ_INPUT_STATE'/>
+    <uses-permission: name='android.permission.SET_ORIENTATION'/>
+    <uses-permission: name='android.permission.INSTALL_PACKAGES'/>
+    <uses-permission: name='android.permission.MOVE_PACKAGE'/>
+    <uses-permission: name='android.permission.CLEAR_APP_USER_DATA'/>
+    <uses-permission: name='android.permission.DELETE_CACHE_FILES'/>
+    <uses-permission: name='android.permission.DELETE_PACKAGES'/>
+    <uses-permission: name='android.permission.ACCESS_SURFACE_FLINGER'/>
+    <uses-permission: name='android.permission.READ_FRAME_BUFFER'/>
+    <uses-permission: name='android.permission.DEVICE_POWER'/>
+    <uses-permission: name='android.permission.INSTALL_LOCATION_PROVIDER'/>
+    <uses-permission: name='android.permission.BACKUP'/>
+    <uses-permission: name='android.permission.FORCE_STOP_PACKAGES'/>
+    <uses-permission: name='android.permission.STOP_APP_SWITCHES'/>
+    <uses-permission: name='android.permission.ACCESS_CONTENT_PROVIDERS_EXTERNALLY'/>
+    <uses-permission: name='android.permission.GRANT_RUNTIME_PERMISSIONS'/>
+    <uses-permission: name='android.permission.REVOKE_RUNTIME_PERMISSIONS'/>
+    <uses-permission: name='android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS'/>
+    <uses-permission: name='android.permission.SET_KEYBOARD_LAYOUT'/>
+    <uses-permission: name='android.permission.GET_DETAILED_TASKS'/>
+    <uses-permission: name='android.permission.SET_SCREEN_COMPATIBILITY'/>
+    <uses-permission: name='android.permission.READ_EXTERNAL_STORAGE'/>
+    <uses-permission: name='android.permission.WRITE_EXTERNAL_STORAGE'/>
+    <uses-permission: name='android.permission.WRITE_MEDIA_STORAGE'/>
+    <uses-permission: name='android.permission.INTERACT_ACROSS_USERS'/>
+    <uses-permission: name='android.permission.INTERACT_ACROSS_USERS_FULL'/>
+    <uses-permission: name='android.permission.CREATE_USERS'/>
+    <uses-permission: name='android.permission.MANAGE_DEVICE_ADMINS'/>
+    <uses-permission: name='android.permission.BLUETOOTH_STACK'/>
+    <uses-permission: name='android.permission.GET_ACCOUNTS'/>
+    <uses-permission: name='android.permission.RETRIEVE_WINDOW_TOKEN'/>
+    <uses-permission: name='android.permission.FRAME_STATS'/>
+    <uses-permission: name='android.permission.BIND_APPWIDGET'/>
+    <uses-permission: name='android.permission.UPDATE_APP_OPS_STATS'/>
+    <uses-permission: name='android.permission.MODIFY_APPWIDGET_BIND_PERMISSIONS'/>
+    <uses-permission: name='android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS'/>
+    <uses-permission: name='android.permission.CHANGE_APP_IDLE_STATE'/>
+    <uses-permission: name='android.permission.MOUNT_UNMOUNT_FILESYSTEMS'/>
+    <uses-permission: name='android.permission.MOUNT_FORMAT_FILESYSTEMS'/>
+    <uses-permission: name='android.permission.MODIFY_PHONE_STATE'/>
+    <uses-permission: name='android.permission.REGISTER_CALL_PROVIDER'/>
+    <uses-permission: name='android.permission.REGISTER_CONNECTION_MANAGER'/>
+    <uses-permission: name='android.permission.REGISTER_SIM_SUBSCRIPTION'/>
+    <uses-permission: name='android.permission.GET_APP_OPS_STATS'/>
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
