--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,56 +36,57 @@
     <uses-permission android:name='android.permission.DUMP'/>
     <uses-permission android:name='android.permission.SIGNAL_PERSISTENT_PROCESSES'/>
     <uses-permission android:name='android.permission.KILL_BACKGROUND_PROCESSES'/>
-    <uses-permission: name='android.permission.FORCE_BACK'/>
-    <uses-permission: name='android.permission.BATTERY_STATS'/>
-    <uses-permission: name='android.permission.INTERNAL_SYSTEM_WINDOW'/>
-    <uses-permission: name='android.permission.INJECT_EVENTS'/>
-    <uses-permission: name='android.permission.RETRIEVE_WINDOW_CONTENT'/>
-    <uses-permission: name='android.permission.SET_ACTIVITY_WATCHER'/>
-    <uses-permission: name='android.permission.READ_INPUT_STATE'/>
-    <uses-permission: name='android.permission.SET_ORIENTATION'/>
-    <uses-permission: name='android.permission.INSTALL_PACKAGES'/>
-    <uses-permission: name='android.permission.MOVE_PACKAGE'/>
-    <uses-permission: name='android.permission.CLEAR_APP_USER_DATA'/>
-    <uses-permission: name='android.permission.DELETE_CACHE_FILES'/>
-    <uses-permission: name='android.permission.DELETE_PACKAGES'/>
-    <uses-permission: name='android.permission.ACCESS_SURFACE_FLINGER'/>
-    <uses-permission: name='android.permission.READ_FRAME_BUFFER'/>
-    <uses-permission: name='android.permission.DEVICE_POWER'/>
-    <uses-permission: name='android.permission.INSTALL_LOCATION_PROVIDER'/>
-    <uses-permission: name='android.permission.BACKUP'/>
-    <uses-permission: name='android.permission.FORCE_STOP_PACKAGES'/>
-    <uses-permission: name='android.permission.STOP_APP_SWITCHES'/>
-    <uses-permission: name='android.permission.ACCESS_CONTENT_PROVIDERS_EXTERNALLY'/>
-    <uses-permission: name='android.permission.GRANT_RUNTIME_PERMISSIONS'/>
-    <uses-permission: name='android.permission.REVOKE_RUNTIME_PERMISSIONS'/>
-    <uses-permission: name='android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS'/>
-    <uses-permission: name='android.permission.SET_KEYBOARD_LAYOUT'/>
-    <uses-permission: name='android.permission.GET_DETAILED_TASKS'/>
-    <uses-permission: name='android.permission.SET_SCREEN_COMPATIBILITY'/>
-    <uses-permission: name='android.permission.READ_EXTERNAL_STORAGE'/>
-    <uses-permission: name='android.permission.WRITE_EXTERNAL_STORAGE'/>
-    <uses-permission: name='android.permission.WRITE_MEDIA_STORAGE'/>
-    <uses-permission: name='android.permission.INTERACT_ACROSS_USERS'/>
-    <uses-permission: name='android.permission.INTERACT_ACROSS_USERS_FULL'/>
-    <uses-permission: name='android.permission.CREATE_USERS'/>
-    <uses-permission: name='android.permission.MANAGE_DEVICE_ADMINS'/>
-    <uses-permission: name='android.permission.BLUETOOTH_STACK'/>
-    <uses-permission: name='android.permission.GET_ACCOUNTS'/>
-    <uses-permission: name='android.permission.RETRIEVE_WINDOW_TOKEN'/>
-    <uses-permission: name='android.permission.FRAME_STATS'/>
-    <uses-permission: name='android.permission.BIND_APPWIDGET'/>
-    <uses-permission: name='android.permission.UPDATE_APP_OPS_STATS'/>
-    <uses-permission: name='android.permission.MODIFY_APPWIDGET_BIND_PERMISSIONS'/>
-    <uses-permission: name='android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS'/>
-    <uses-permission: name='android.permission.CHANGE_APP_IDLE_STATE'/>
-    <uses-permission: name='android.permission.MOUNT_UNMOUNT_FILESYSTEMS'/>
-    <uses-permission: name='android.permission.MOUNT_FORMAT_FILESYSTEMS'/>
-    <uses-permission: name='android.permission.MODIFY_PHONE_STATE'/>
-    <uses-permission: name='android.permission.REGISTER_CALL_PROVIDER'/>
-    <uses-permission: name='android.permission.REGISTER_CONNECTION_MANAGER'/>
-    <uses-permission: name='android.permission.REGISTER_SIM_SUBSCRIPTION'/>
-    <uses-permission: name='android.permission.GET_APP_OPS_STATS'/>
+    <uses-permission android:name='android.permission.KILL_BACKGROUND_PROCESSES'/>
+    <uses-permission android:name='android.permission.FORCE_BACK'/>
+    <uses-permission android:name='android.permission.BATTERY_STATS'/>
+    <uses-permission android:name='android.permission.INTERNAL_SYSTEM_WINDOW'/>
+    <uses-permission android:name='android.permission.INJECT_EVENTS'/>
+    <uses-permission android:name='android.permission.RETRIEVE_WINDOW_CONTENT'/>
+    <uses-permission android:name='android.permission.SET_ACTIVITY_WATCHER'/>
+    <uses-permission android:name='android.permission.READ_INPUT_STATE'/>
+    <uses-permission android:name='android.permission.SET_ORIENTATION'/>
+    <uses-permission android:name='android.permission.INSTALL_PACKAGES'/>
+    <uses-permission android:name='android.permission.MOVE_PACKAGE'/>
+    <uses-permission android:name='android.permission.CLEAR_APP_USER_DATA'/>
+    <uses-permission android:name='android.permission.DELETE_CACHE_FILES'/>
+    <uses-permission android:name='android.permission.DELETE_PACKAGES'/>
+    <uses-permission android:name='android.permission.ACCESS_SURFACE_FLINGER'/>
+    <uses-permission android:name='android.permission.READ_FRAME_BUFFER'/>
+    <uses-permission android:name='android.permission.DEVICE_POWER'/>
+    <uses-permission android:name='android.permission.INSTALL_LOCATION_PROVIDER'/>
+    <uses-permission android:name='android.permission.BACKUP'/>
+    <uses-permission android:name='android.permission.FORCE_STOP_PACKAGES'/>
+    <uses-permission android:name='android.permission.STOP_APP_SWITCHES'/>
+    <uses-permission android:name='android.permission.ACCESS_CONTENT_PROVIDERS_EXTERNALLY'/>
+    <uses-permission android:name='android.permission.GRANT_RUNTIME_PERMISSIONS'/>
+    <uses-permission android:name='android.permission.REVOKE_RUNTIME_PERMISSIONS'/>
+    <uses-permission android:name='android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS'/>
+    <uses-permission android:name='android.permission.SET_KEYBOARD_LAYOUT'/>
+    <uses-permission android:name='android.permission.GET_DETAILED_TASKS'/>
+    <uses-permission android:name='android.permission.SET_SCREEN_COMPATIBILITY'/>
+    <uses-permission android:name='android.permission.READ_EXTERNAL_STORAGE'/>
+    <uses-permission android:name='android.permission.WRITE_EXTERNAL_STORAGE'/>
+    <uses-permission android:name='android.permission.WRITE_MEDIA_STORAGE'/>
+    <uses-permission android:name='android.permission.INTERACT_ACROSS_USERS'/>
+    <uses-permission android:name='android.permission.INTERACT_ACROSS_USERS_FULL'/>
+    <uses-permission android:name='android.permission.CREATE_USERS'/>
+    <uses-permission android:name='android.permission.MANAGE_DEVICE_ADMINS'/>
+    <uses-permission android:name='android.permission.BLUETOOTH_STACK'/>
+    <uses-permission android:name='android.permission.GET_ACCOUNTS'/>
+    <uses-permission android:name='android.permission.RETRIEVE_WINDOW_TOKEN'/>
+    <uses-permission android:name='android.permission.FRAME_STATS'/>
+    <uses-permission android:name='android.permission.BIND_APPWIDGET'/>
+    <uses-permission android:name='android.permission.UPDATE_APP_OPS_STATS'/>
+    <uses-permission android:name='android.permission.MODIFY_APPWIDGET_BIND_PERMISSIONS'/>
+    <uses-permission android:name='android.permission.INSTALL_GRANT_RUNTIME_PERMISSIONS'/>
+    <uses-permission android:name='android.permission.CHANGE_APP_IDLE_STATE'/>
+    <uses-permission android:name='android.permission.MOUNT_UNMOUNT_FILESYSTEMS'/>
+    <uses-permission android:name='android.permission.MOUNT_FORMAT_FILESYSTEMS'/>
+    <uses-permission android:name='android.permission.MODIFY_PHONE_STATE'/>
+    <uses-permission android:name='android.permission.REGISTER_CALL_PROVIDER'/>
+    <uses-permission android:name='android.permission.REGISTER_CONNECTION_MANAGER'/>
+    <uses-permission android:name='android.permission.REGISTER_SIM_SUBSCRIPTION'/>
+    <uses-permission android:name='android.permission.GET_APP_OPS_STATS'/>
 
     <application
       android:name=".MainApplication"
